# aviation-wx-decoder

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: pages.yml  publish-crate.yml
crates/aviation-wx/: Cargo.toml  README.md
crates/aviation-wx-wasm/: Cargo.toml  README.md
crates/aviation-wx-wasm/src/: lib.rs
crates/aviation-wx/src/: lib.rs
crates/aviation-wx/tests/: bom.rs  golden.rs
crates/aviation-wx/tests/snapshots/: golden__metar_golden.snap  golden__notam_golden.snap  golden__taf_golden.snap  metar_golden.snap  notam_golden.snap  taf_golden.snap
crates/backend/: Cargo.toml
crates/backend/src/: api.rs  lib.rs  main.rs
crates/backend/tests/: api.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  parse.rs
crates/metar/: Cargo.toml  README.md
crates/metar/src/: lib.rs
crates/notam/: Cargo.toml  README.md
crates/notam/src/: lib.rs
crates/taf/: Cargo.toml  README.md
crates/taf/src/: lib.rs
docs/: api.md  api.zh-CN.md  assumptions.md  assumptions.zh-CN.md  cli.md  cli.zh-CN.md  metar_coverage.md  metar_coverage.zh-CN.md  openapi.json  schema.md  schema.zh-CN.md  wasm.md  wasm.zh-CN.md
scripts/: check-doc-i18n.ps1  check-doc-i18n.sh  smoke.ps1
tests/fixtures/cli/: batch.txt
tests/fixtures/metar/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt
tests/fixtures/notam/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt
tests/fixtures/taf/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt
web/: .env.example  index.html  package-lock.json  package.json  playwright.config.js  shortcut.html  vite.config.js
web/scripts/: gen_notam_q.js  gen_notam_q_zh.js  merge_notam_q_bilingual.js
web/src/: main.jsx  styles.css
web/src/app/: App.jsx
web/src/components/: EmptyState.jsx  FieldRow.jsx  Panel.jsx  SegmentedToggle.jsx  StatusPill.jsx
web/src/data/: samples.json
web/src/data/lexicons/: fir_codes.json  notam_body.json  notam_q_condition.json  notam_q_subject.json
web/src/features/analysis/: buildTokenAnalysis.js
web/src/features/decode/: useDecode.js
web/src/features/explain/: buildExplanation.js  fieldExplain.js  remarkExplain.js
web/src/features/station/: useStations.js
web/src/features/wasm/: decoder.js
web/src/i18n/: en.js  index.js  zhCN.js
web/src/shortcut/: main.js
web/src/utils/: format.js  json.js  message.js  storage.js
web/tests/: smoke.spec.js
