[package]
name = "aviation-wx"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Decode aviation weather messages (TAF/METAR/NOTAM) into structured JSON."
repository = "https://github.com/Nishikori-Yui/aviation-wx-decoder"

[dependencies]
aviation-wx-core = { path = "../core" }
aviation-wx-taf = { path = "../taf" }
aviation-wx-metar = { path = "../metar" }
aviation-wx-notam = { path = "../notam" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
