[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aviation-wx = { path = "../aviation-wx" }
aviation-wx-core = { path = "../core" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }

