[package]
name = "aviation-wx-core"
version = "0.1.4"
edition = "2021"
license.workspace = true
repository = "https://github.com/Nishikori-Yui/aviation-wx-decoder"
description = "Shared models and normalization helpers for aviation-wx."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
