[package]
name = "aviation-wx-notam"
version = "0.1.3"
edition = "2021"
license.workspace = true
repository = "https://github.com/Nishikori-Yui/aviation-wx-decoder"
description = "NOTAM parser and normalizer for aviation-wx."

[dependencies]
aviation-wx-core = { path = "../core", version = "0.1.3" }
serde = { workspace = true }
regex = { workspace = true }
